--- a/aschip/layout/styles/login.css
+++ b/aschip/layout/styles/login.css
@@ -6,14 +6,18 @@ body
 }
 #loginForm
 {	
+	position: absolute;
+    top: 100px;
+    left: 35%;
+    z-index: 1000;
     color: #e10707;
-    background-color: transparent;
+    background-color: rgb(231, 216, 216);
     font-size: 23px;
     border: 2px solid black;
     border-radius: 4%;
     padding: 28px 28px 52px 28px;
     width: 233px;
-    height: 254px;
+    height: 285px;
     margin: auto;
 }
 .btnPrijava
@@ -22,7 +26,15 @@ body
 	background-color:#bfbdbd;
 	color:#e10707;
 	margin-left:20%;
-	}
+	float:right;
+}
+.btnIzadji
+{	
+	font-family:Audiowide;
+	background-color:#bfbdbd;
+	color:#e10707;
+	float:left;
+}
 #loginForm h1{
     background: #bfbdbd;
     padding: 20px 30px 15px 30px;
