Validacija gotovo i neke sitnice, ostaje galerija, nova baza ubacena

--- a/aschip/layout/styles/layout.css
+++ b/aschip/layout/styles/layout.css
@@ -132,3 +132,11 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 
 #copyright{padding:10px 0;}
 #copyright p{margin:0; padding:0;}
+
+
+
+
+
+.redBorder{
+	border:2px solid red;
+}
