--- a/aschip/layout/styles/layout.css
+++ b/aschip/layout/styles/layout.css
@@ -38,7 +38,7 @@ img{display:block; margin:0; padding:0; border:none;}
 /* ----------------------------------------------Wrapper------------------------------------- */
 #centralni{font-size:x-large;padding: 0 0 0 48px;}
 .odabir label, select{padding-right:7.5em; font-size:large;}
-.odabir select {padding:10px 135px 15px 1px;font-family:audiowide;border:2px solid #b51010;border-radius:10px;}
+.odabir select {padding:10px 135px 15px 1px;font-family:audiowide;border:2px solid #b51010;border-radius:10px; display: inline-block;}
 div.wrapper{display: flex; width:100%; margin:0; text-align:left;}
 div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6{margin:0; padding:0; font-size:20px; font-weight:normal; line-height:normal; font-family:Georgia, "Times New Roman", Times, serif;}
 .col1{color:#CCCCCC; background-color:#bfbdbd;}
