--- a/aschip/layout/styles/layout.css
+++ b/aschip/layout/styles/layout.css
@@ -43,7 +43,7 @@ img{display:block; margin:0; padding:0; border:none;}
 div.wrapper{display: flex; width:100%; margin:0; text-align:left;}
 div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6{margin:0; padding:0; font-size:20px; font-weight:normal; line-height:normal; font-family:Georgia, "Times New Roman", Times, serif;}
 .col1{color:#CCCCCC; background-color:#bfbdbd;}
-.col2, .col2 a{color:#FFFFFF; /*background-color:#b51010;*/}
+.col2, .col2 a{color:#FFFFFF; background-color:#b51010;}
 .col3{color:#777777; background-color:#FFFFFF;}
 .col3 a{color:#e10707; background-color:#FFFFFF;}
 .col4{color:#FFFFFF; background-color:#000000;}
@@ -57,7 +57,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 /* ----------------------------------------------Header------------------------------------- */
 
 #header{padding:20px 0; z-index:1000;}
-#header #logo{display:block; float:left; width:300px; overflow:hidden;}
+#header #logo{display:block; float:left; width:390px; overflow:hidden; margin-left:370px;}
 #header #logo h1, #header #logo p{margin:0; padding:0; line-height:normal;}
 #header #logo h1{font-size:36px; text-transform:uppercase;}
 #header h1 a{color:#B2C629; background-color:#000000;}
