--- a/aschip/layout/styles/navi.css
+++ b/aschip/layout/styles/navi.css
@@ -9,13 +9,13 @@ File: Navigation CSS
 */
 
 #topnav{display:block; float:right; margin:7px 0 0 0; padding:0; list-style:none; font-size:14px; font-weight:bold; font-family:Verdana, Arial, Helvetica, sans-serif;}
-#topnav ul, #topnav li{float:left; list-style:none; margin:0; padding:3px 44px 0px 0px}
+#topnav ul, #topnav li{float:left; list-style:none; margin:0; /*padding:3px 44px 0px 0px*/}
 #topnav li a:link, #topnav li a:visited, #topnav li a:hover{display:block; margin:0; padding:15px 20px; color:#999999; background-color:#333333;}
 #topnav ul ul li a:link, #topnav ul ul li a:visited{border:none;}
 #topnav li.last a{margin-right:0;}
 #topnav li a:hover, #topnav ul li.active a{color:#FFFFFF; background-color:#b51010;}
 #topnav li li a:link, #topnav li li a:visited{width:150px; float:none; margin:0; padding:7px 10px; font-size:12px; font-weight:normal;}
-#topnav li ul{z-index:9999; position:absolute; left:-999em; height:auto; width:126px; border-right:1px solid #CCCCCC;border-left:1px solid #CCCCCC; border-bottom:1px solid #CCCCCC;}
+#topnav li ul{z-index:9999; position:absolute; left:-999em; height:auto; width:170px; border-right:1px solid #CCCCCC;border-left:1px solid #CCCCCC; border-bottom:1px solid #CCCCCC; padding:0px;}
 #topnav li ul a{width:140px;}
 #topnav li ul ul{margin:-32px 0 0 0;}
 #topnav li:hover ul ul{left:-999em;}
